<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunday</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="each">패</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="stage_1">1단계</string>
    <string name="stage_2">2단계</string>
    <string name="stage_3">3단계</string>
    <string name="stage_4">4단계</string>
    <string name="stage_5">5단계</string>

</resources>
