<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/stage_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stage_1"
        android:tag="1"/>"

    <Button
        android:id="@+id/stage_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stage_1"
        android:text="@string/stage_2"
        android:tag="2" />

    <Button
        android:id="@+id/stage_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stage_2"
        android:text="@string/stage_3"
        android:tag="3" />

    <Button
        android:id="@+id/stage_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stage_3"
        android:text="@string/stage_4"
        android:tag="4" />

    <Button
        android:id="@+id/stage_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stage_4"
        android:text="@string/stage_5"
       	android:tag="5" />

</RelativeLayout>
